# ASICameraPythonDemoByAster

./: .gitattributes  CMakeLists.txt  Readme.md
ASICamera/: ASICamera.cpp  CMakeLists.txt  TestCamera.py  TestFunctions.py
ASI_SDK/include/: ASICamera2.h
